<resources>

    <string name="app_name">Habit Logger</string>

    <string name="notices_style" translatable="false">
        @string/notices_default_style
    </string>

    <!--Activity Labels-->
    <string name="habit_session_activity_label">Habit Session</string>
    <string name="active_habits_activity_label">@string/active_sessions_upper</string>
    <string name="about_activity_label">About</string>

    <string name="active_sessions_upper">Active Sessions</string>
    <string name="active_sessions_lower">active sessions</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_nav_string">Home</string>
    <string name="running_habits_nav_string">Active Sessions</string>
    <string name="statistics_overview_nav_title">Data overview</string>
    <string name="settings_nav_string">Settings</string>
    <string name="about_nav_string">About</string>
    <string name="value_placeholder">\'value\'</string>
    <string name="habit_name_placeholder">\'Habit Name\'</string>
    <string name="spinner_prompt_categories">Select Category</string>
    <string name="habit_name_content_description">Habit Name</string>
    <string name="streak_count_content_description">Streak Count</string>
    <string name="streak_count_value_content_description">Streak count value.</string>
    <string name="session_control_button_content_description">Session control button</string>
    <string name="card_view_accent_description">A color accent indicating the category type.</string>
    <string name="session_note_hint">Use this space for notes.</string>
    <string name="session_pause_play_content_description">Session pause, or play toggle button.</string>
    <string name="export_database">Backup Data</string>
    <string name="restore_database">Restore Data</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="active_session_placeholder">active session(s)</string>
    <string name="time_display_placeholder">00:00:00</string>
    <string name="hours_place">Hours place</string>
    <string name="minutes_place">Minutes place</string>
    <string name="seconds_place">Seconds place</string>
    <string name="no">no</string>
    <string name="one">1</string>
    <string name="links">Where to find me.</string>
    <string name="app_icon_about_content_description">Image of the app icon.</string>
    <string name="github_link_content_description">Link to the author\'s GitHub.</string>
    <string name="linkedin_link_content_description">Link to the author\'s LinkedIn.</string>
    <string name="freelancer_link_content_description">Link to the author\'s freelancer page.</string>
    <string name="description_on_about_activity">Habit Logger is an application to help you monitor yourself. Specifically, how you spend your time.</string>
    <string name="active_session">active session</string>
    <string name="preference_checkbox_preference">checkbox_preference</string>
    <string name="cannot_open_active_sessions_activity">No active sessions</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_description">Habit Description</string>
    <string name="habit_category">Habit Category</string>
    <string name="new_habit_title">New Habit</string>
    <string name="edit_habit_title">Edit Habit</string>
    <string name="session_notification_ticker_format_string">Controller for \"%s\" created</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="title_activity_habit">HabitActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_edit">Edit Habit</string>
    <string name="action_delete">Delete Habit</string>
    <string name="action_session">Enter Session</string>
    <string name="action_export">Export Data (CSV)</string>
    <string name="action_archive">Archive Habit</string>
    <string name="action_unarchive">Unarchive Habit</string>
    <string name="title_activity_overall_statistics">Data Overview</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="first_letter_of_hours">H</string>
    <string name="colon_to_separate_time">:</string>
    <string name="first_letter_of_minutes">M</string>
    <string name="first_letter_of_seconds">S</string>
    <string name="cancel">Cancel</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="create_new_category_button">Create new category button</string>
    <string name="_00">00</string>
    <string name="pref_hide_fab_on_scroll">preference_hide_fab_on_scroll</string>
    <string name="pref_hide_current_sessions_card_on_scroll">preference_hide_current_sessions_card_on_scroll</string>
    <string name="pref_ask_finish">preference_ask_before_session_finish</string>
    <string name="pref_ask_cancel">preference_ask_before_session_cancel</string>
    <string name="filter_entries">Filter entries…</string>
    <string name="search">Search…</string>
    <string name="action_reset">Reset Entries</string>
    <string name="finish">Finish</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_note_available_entry">Tap to add note.</string>
    <string name="navigation_extras_group_title">App tools</string>
    <string name="pause_play_content_description">Toggle the state of the session</string>
    <string name="hash_tag">#</string>
    <string name="category_card_habits">Habits: </string>
    <string name="date_range_entries_label">Entries:</string>
    <string name="date_range_total_time_label">Total Time:</string>
    <string name="date_range_from_label">From</string>
    <string name="date_range_to_label">To</string>
    <string name="date_range_type_label">Date Range Type</string>
    <string name="modify_category_name_hint">Category Name</string>
    <string name="modify_category_color_text">#637aa6</string>
    <string name="modify_category_color_hint">Color</string>
    <string name="modify_entry_duration_title">Duration (Hour, Minute, Second)</string>
    <string name="colon">:</string>
    <string name="modify_entry_session_date_hint">Session Date</string>
    <string name="modify_entry_starting_time_hint">Starting Time</string>
    <string name="modify_entry_note_hint">Note</string>
    <string name="time_of_day_placeholder">12:00 PM</string>
    <string name="toggle_note_content_description">expand, collapse note</string>
    <string name="starting_time_distribution">Starting Time Distribution</string>
    <string name="habit_score_over_time">Habit Score Over Time</string>
    <string name="time_breakdown_of_all_categories">Time breakdown of all categories</string>
    <string name="habit_score">Habit Score</string>
    <string name="days_completed">Days Completed</string>
    <string name="total_days">Total Days</string>
    <string name="time_breakdown">Time Breakdown</string>
    <string name="streaks">Streaks</string>
    <string name="time_averages">Time Averages</string>
    <string name="hours_per_month">Hours Per Month</string>
    <string name="hours_per_week">Hours Per Week</string>
    <string name="hours_per_day">Hours Per Day</string>
    <string name="days_per_week">days per week</string>
    <string name="share">Share</string>
    <string name="licenses_and_attributions"><![CDATA[Licenses & Attributions]]></string>
    <string name="title_activity_licenses">LicensesActivity</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="app_settings">Settings</string>
    <string name="ui_settings">User Interface Settings</string>
    <string name="notifications_settings">Notification Settings</string>
    <string name="manually_create_entry">Manually Create Entry</string>
    <string name="enter_session">Enter Session</string>

    <array name="tab_titles">
        <item>Entries</item>
        <item>Calendar</item>
        <item>Statistics</item>
    </array>

    <!-- Preference keys -->
    <string name="pref_show_categories">preference_how_to_show_category</string>
    <string name="pref_is_night_mode">preference_is_night_mode</string>
    <string name="pref_display_current_sessions_card">preference_display_current_sessions_card</string>
    <string name="pref_display_current_sessions_card_at_zero">preference_display_current_sessions_at_zero</string>
    <string name="pref_do_show_notifications">preference_do_show_notifications</string>
    <string name="pref_date_format">preference_date_format</string>
    <string name="pref_category_sticky">preference_make_categories_sticky</string>
    <string name="pref_date_header_sticky">preference_date_headers_sticky</string>

    <string name="filter_main_activity">Search…</string>
    <string name="no_results">No Results</string>
    <string name="no_habits_available">No Habits Available</string>
    <string name="no_data_available_lower">No data available</string>
    <string name="confirm_data_export">Confirm Data Backup</string>
    <string name="confirm_data_export_message">This will overwrite any pre-existing backup file.</string>
    <string name="backup_created">Backup created</string>
    <string name="confirm_data_restore">Confirm Data Restore</string>
    <string name="confirm_data_restore_message">This will overwrite the database.</string>
    <string name="data_restored">Database restored</string>
    <string name="entries_deleted_message">Entries deleted</string>
    <string name="confirm_habit_data_reset_title">Confirm Data Reset</string>
    <string name="confirm_habit_data_reset_message_format">Do you really want to delete all entries for \'%s\'?</string>
    <string name="database_export_format">Database exported to: %s</string>
    <string name="no_entries_available">No Entries Available</string>
    <string name="no_stats_available">No Statistics Available</string>
    <string name="toggle_theme">Night mode</string>
    <string name="no_habits_archived">Archive Is Empty</string>
    <string name="no_active_sessions">No Active Sessions</string>
    <string name="pref_allow_upon_no_active_sessions">preference_close_upon_no_active_sessions</string>
    <string name="title_activity_habit_data">HabitDataActivity</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="category_card_fragment_title">Home</string>
    <string name="all_habits_fragment_title">Home</string>
    <string name="remove_category">Remove Category</string>
    <string name="remove_category_message">This will remove this category and all of it\'s data.</string>

</resources>
