<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.brandon.habitlogger.ui.Activities.HabitDataActivity.HabitDataActivity">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/filter_entries"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_habit_edit"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/menu_enter_session"
        android:title="@string/action_session"/>

    <item
        android:id="@+id/menu_export_habit"
        android:title="@string/action_export"/>

    <item
        android:id="@+id/menu_toggle_archive"
        android:title="@string/action_archive"/>

    <item
        android:id="@+id/menu_reset_habit"
        android:title="@string/action_reset"/>

    <item
        android:id="@+id/menu_delete_habit"
        android:title="@string/action_delete"/>

</menu>
