<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_nav_string"/>

    <item
        android:id="@+id/running_habits_nav"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/running_habits_nav_string"/>

    <item
        android:id="@+id/archived_habits"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/menu_archive"/>
    <item
        android:id="@+id/overall_stats_nav"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/statistics_overview_nav_title"/>

    <item android:title="@string/navigation_extras_group_title">
        <menu>
            <item
                android:id="@+id/settings_nav"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings_nav_string"/>

            <item
                android:id="@+id/about_nav"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_nav_string"/>
        </menu>
    </item>

</menu>
