<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content" android:layout_height="wrap_content"

    android:id="@+id/card_view"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/habitCard">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/card_view_accent_description"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:id="@+id/category_accent" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/habit_name_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/habit_name_content_description"

                android:text="@string/habit_name_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:id="@+id/date_strip_view"
                android:layout_below="@id/habit_name_card_view"
                android:layout_width="match_parent"
                android:layout_height="32dp"

                android:background="@color/colorPrimaryDark"
                android:padding="1dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:gravity="center_vertical"
                android:layout_below="@+id/date_strip_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/streak_counter_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:contentDescription="@string/streak_count_value_content_description"
                    android:drawableStart="@drawable/ic_streak_placeholder"
                    android:drawableLeft="@drawable/ic_image_box"

                    android:text="@string/value_placeholder"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/session_control_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:scaleType="centerCrop"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/session_control_button_content_description"

                    android:src="@drawable/ic_play_circle_outline_black_24dp"
                    android:background="#00ffffff"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>