<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/defaultCardViewBackground"

    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="@dimen/default_elevation">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_accent"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:elevation="5dp"
            android:visibility="visible"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/entry_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/entry_start_time"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/ic_timer_black_24dp"
                android:gravity="center"
                android:text="@string/time_display_placeholder"/>

            <TextView
                android:id="@+id/entry_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/entry_note"
                android:layout_alignStart="@+id/entry_note"
                android:drawablePadding="3dp"
                android:drawableStart="@drawable/ic_clock_black_24dp"
                android:gravity="center"
                android:text="@string/time_of_day_placeholder"/>

            <ImageButton
                android:id="@+id/expand_note"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/entry_note"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/toggle_note_content_description"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:visibility="gone"/>

            <com.example.brandon.habitlogger.ui.Widgets.LayoutCheckableTextView
                android:id="@+id/entry_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/entry_duration"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:elevation="1dp"
                android:ellipsize="end"
                android:maxLines="@integer/entry_card_note_max_lines"
                android:text="@string/no_note_available_entry"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal|italic"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>