<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background2"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/category_accent"
            android:layout_width="@dimen/accent_strip_width"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:elevation="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/white"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="0.6"
                android:text="@string/value_placeholder"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:shadowColor="@android:color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="0.6"
                    android:text="@string/category_card_habits"
                    android:textAlignment="center"
                    android:textColor="@color/textColorSubTitle"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/number_of_habits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:shadowColor="@android:color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="0.6"
                    android:text="@string/hash_tag"
                    android:textAlignment="center"
                    android:textColor="@color/textColorSubTitle"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>